adding java testing stuff